lab4 nb2 started

--- a/ix-lab4/lab4-1-vsm.ipynb
+++ b/ix-lab4/lab4-1-vsm.ipynb
@@ -373,20 +373,20 @@
      "text": [
       "TOP 15 TERMS FROM TFIDF\n",
       "  6.03765254148 : verification\n",
+      "  3.89523690385 : systemverilog\n",
       "  3.89523690385 : systemc\n",
       "  3.89523690385 : functional verification\n",
-      "  3.89523690385 : systemverilog\n",
       "  3.81500253808 : vhdl\n",
       "  3.26125190356 : rtl\n",
       "  2.59682460257 : systemverilog systemc\n",
       "  2.49469492386 : hardware\n",
-      "  2.3301579359 : design vhdl\n",
       "  2.3301579359 : socs\n",
+      "  2.3301579359 : design vhdl\n",
       "  1.87141350903 : functional\n",
       "  1.74761845192 : digital hardware\n",
       "  1.56208089818 : digital\n",
       "  1.54761845192 : system level\n",
-      "  1.08708396785 : eda tool\n"
+      "  1.08708396785 : systemsonchip\n"
      ]
     }
    ],
@@ -440,7 +440,31 @@
    },
    "outputs": [],
    "source": [
+    "# the word \"chains\" has been replaced by \"chain\" by lemmatization\n",
     "markov_chain_index = words_index['markov chain']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'facebook'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-aea2ef02685d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwords_index\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'facebook'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 'facebook'"
+     ]
+    }
+   ],
+   "source": [
+    "words_index['facebook']"
    ]
   },
   {
@@ -459,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -473,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -487,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -502,7 +526,7 @@
       "  4.62049155838 : COM-516\n",
       "  3.46536866878 : MGT-484\n",
       "  1.26013406138 : FIN-408\n",
-      "  1.15512288959 : COM-308\n"
+      "  1.15512288959 : MATH-600\n"
      ]
     }
    ],
@@ -518,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -528,12 +552,12 @@
      "output_type": "stream",
      "text": [
       "SIMILARITIES BETWEEN TOP 5 MARKOV CHAINS SCORES\n",
-      "          MATH-332 COM-516 MGT-484 FIN-408 COM-308\n",
-      "MATH-332    1.00    0.34    0.33    0.18    0.07\n",
-      " COM-516    0.34    1.00    0.32    0.21    0.10\n",
-      " MGT-484    0.33    0.32    1.00    0.18    0.08\n",
+      "          MATH-332 COM-516 MGT-484 FIN-408 MATH-600\n",
+      "MATH-332    1.00    0.34    0.33    0.18    0.14\n",
+      " COM-516    0.34    1.00    0.32    0.21    0.19\n",
+      " MGT-484    0.33    0.32    1.00    0.18    0.10\n",
       " FIN-408    0.18    0.21    0.18    1.00    0.04\n",
-      " COM-308    0.07    0.10    0.08    0.04    1.00\n"
+      "MATH-600    0.14    0.19    0.10    0.04    1.00\n"
      ]
     }
    ],
@@ -555,6 +579,21 @@
     "### What do you think of the results? Give your intuition on what is happening.\n",
     "\n",
     "Since all we looked for were the descriptions where \"markov chain(s)\" appears the most, we expected to have relatively low similartiy scores. It is likely that courses that deal with markov chains have somewhat similar topics, as it is a mathematical concept at the base, but that is not at all reqired."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "np.save(\"data/TFIDF.npy\", TFIDF)\n",
+    "np.save(\"data/words.npy\", words_list)\n",
+    "np.save(\"data/words_dict.npy\", words_index)\n",
+    "np.save(\"data/courses.npy\", courses_list)\n",
+    "np.save(\"data/courses_dict.npy\", courses_index)"
    ]
   },
   {
