--- a/ix-lab4/lab4-2-lsi.ipynb
+++ b/ix-lab4/lab4-2-lsi.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -36,6 +36,24 @@
     "import pickle\n",
     "import numpy as np\n",
     "from scipy.sparse.linalg import svds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "X = np.load(\"data/TFIDF.npy\")\n",
+    "X = X.T\n",
+    "words = np.load(\"data/words.npy\")\n",
+    "courses = np.load(\"data/courses.npy\")\n",
+    "\n",
+    "M = len(words)\n",
+    "N = len(courses)\n",
+    "K = 300"
    ]
   },
   {
@@ -56,12 +74,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "U, S, VT = svds(X, k=K)\n",
+    "V = VT.T"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,13 +92,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "The rows of U are the left eigenvectors.\n",
+    "\n",
+    "The columns of V are the right eigenvectors.\n",
+    "\n",
+    "The values in S are the eigenvalues, ordered from smallest to largest."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,12 +113,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LARGEST 20 EIGENVALUES:\n",
+      "[ 61.4911109   41.11869589  38.06116804  36.89655454  35.64803951\n",
+      "  34.57357261  33.17108239  32.71968738  32.20601846  31.4253953\n",
+      "  31.10123689  30.36687001  29.97372375  29.73694418  28.73211126\n",
+      "  28.65421312  28.46731951  28.27977773  28.22180541  27.95464965]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"LARGEST 20 EIGENVALUES:\")\n",
+    "print(S[:-21:-1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -114,28 +155,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "topics = []\n",
+    "\n",
+    "for i in range(K-1, 0, -1):\n",
+    "    topics.append([S[i], U.T[i], VT[i]])"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Print the top-10 topics as a combination of terms and a combination of documents."
+    "### Print the top-10 topics as a combination of terms and a combination of documents.\n",
+    "\n",
+    "For this, we will print the top 10 terms and decuments respectively of the top-10 topics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "topic: 1 ( eigenvalue: 61.4911108973 )\n",
+      "  top10 terms:\n",
+      "    -0.00121034656606 : flat plate\n",
+      "    -0.00121034656606 : previously\n",
+      "    -0.00143706686495 : optimal solutionstake\n",
+      "    -0.00623850065061 : surface energy\n",
+      "    -0.00698697273088 : course general\n",
+      "    -0.00789013541407 : actors\n",
+      "    -0.00791435701751 : electronic devices\n",
+      "    -0.00830468322203 : future\n",
+      "    -0.00834070848096 : presentation project\n",
+      "    -0.00863985144737 : critique\n",
+      "  top10 documents:\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 5415 is out of bounds for axis 0 with size 854",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-8f068cbbd696>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"  top10 documents:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margsort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mcurr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"   \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcurr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\":\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcourses\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 5415 is out of bounds for axis 0 with size 854"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    curr = topics[i]\n",
+    "    print(\"topic:\", i+1, \"( eigenvalue:\", curr[0], \")\")\n",
+    "    print(\"  top10 terms:\")\n",
+    "    for t in np.argsort(-curr[2])[:10]:\n",
+    "        print(\"   \", curr[2][t], \":\", words[t])\n",
+    "    print(\"  top10 documents:\")\n",
+    "    for t in np.argsort(-curr[1])[:10]:\n",
+    "        print(\"   \", curr[1][t], \":\", courses[t])\n",
+    "    print(\"\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,13 +242,27 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Exercise 4.6: Document similarity search in concept-space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def docsim(t, d):\n",
+    "    return ( np.dot(U[t], S*V[d]) ) / ( np.linalg.norm(U[t]) * np.linalg.norm(S*V[d]) )"
    ]
   },
   {
@@ -171,12 +276,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "words_dict = np.load(\"data/words_dict.npy\").item()\n",
+    "courses_dict = np.load(\"data/courses_dict.npy\").item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7043"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words_dict['markov chain']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(854, 300)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,13 +338,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "As before, the term \"facebook\" does not exist in the filtered list of terms."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -203,21 +355,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 854 is out of bounds for axis 0 with size 854",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-641ab4e50914>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mM\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mmarkov_sim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdocsim\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmarkov_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-8-e5201e5f354f>\u001b[0m in \u001b[0;36mdocsim\u001b[0;34m(t, d)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mdocsim\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m(\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mU\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mS\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mV\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m(\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mU\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mS\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mV\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: index 854 is out of bounds for axis 0 with size 854"
+     ]
+    }
+   ],
+   "source": [
+    "markov_index = words_dict['markov chain']\n",
+    "markov_sim = []\n",
+    "\n",
+    "for i in range(M):\n",
+    "    markov_sim.append(docsim(markov_index, i))"
+   ]
   },
   {
    "cell_type": "markdown",
