lab4 nb1-2 finished

--- a/ix-lab4/lab4-1-vsm.ipynb
+++ b/ix-lab4/lab4-1-vsm.ipynb
@@ -40,6 +40,7 @@
     "\n",
     "from nltk.stem.wordnet import WordNetLemmatizer\n",
     "\n",
+    "# load the files and initialize the punctiuation to remove\n",
     "courses = load_json('data/courses.txt')\n",
     "stopwords = load_pkl('data/stopwords.pkl')\n",
     "punctuation = '.?!,;:-–()[]{}\"/\\'0123456789%*+='"
@@ -69,6 +70,9 @@
    },
    "outputs": [],
    "source": [
+    "# initialize the minimum and maximum times any term may appear\n",
+    "# terms that occur less than MIN\n",
+    "# or more than MAX times get filtered\n",
     "MIN = 10\n",
     "MAX = 2000\n",
     "\n",
@@ -86,6 +90,8 @@
    },
    "outputs": [],
    "source": [
+    "# function to construct n-grams of any length n\n",
+    "# based on the solution found on\n",
     "# http://locallyoptimal.com/blog/2013/01/20/elegant-n-gram-generation-in-python/\n",
     "def find_ngrams(input_list, n):\n",
     "    return [str(x[0] + \" \" + x[1]) for x in list(zip(*[input_list[i:] for i in range(n)])) ]"
@@ -101,13 +107,12 @@
    "source": [
     "courses_proc = {}\n",
     "words = {}\n",
-    "cids = []\n",
     "\n",
+    "# construct the dictionaries for the courses and terms\n",
     "for c in courses:\n",
     "    cid = c['courseId']\n",
-    "    cids.append(cid)\n",
     "    \n",
-    "    # transfer all to lowercase, remove punctuation\n",
+    "    # transfer all to lowercase, remove punctuation and numbers\n",
     "    desc = c['description'].lower().translate(str.maketrans('', '', punctuation))\n",
     "    # remove stopwords\n",
     "    desc_proc = [lemmatizer.lemmatize(word, pos='v') for word in desc.split() if word not in stopwords]\n",
@@ -140,7 +145,7 @@
    "source": [
     "words_filtered = []\n",
     "\n",
-    "# most and least frequent words to filter\n",
+    "# filter most and least frequent words\n",
     "for w in words:\n",
     "    if words[w] > MIN and words[w] < MAX:\n",
     "        words_filtered.append(w)"
@@ -156,6 +161,7 @@
    "source": [
     "courses_proc2 = {}\n",
     "\n",
+    "# remove all the words that have been filtered out from the descriptions\n",
     "for c in courses_proc:\n",
     "    courses_proc2[c] = [word for word in courses_proc[c] if word in words_filtered]"
    ]
@@ -175,10 +181,10 @@
    "source": [
     "* Make sure every courseId only appears once. If it appears more than once, append the two descriptions\n",
     "* Change all cheacters to lowercase, to avoid the same word being considered different. Additionally, all words in stopwords.pkl are in lowercase, so this ensures all words are removed correctly\n",
-    "* Remove punctuation, numbers and other symbols, for the same reason as above. Only the words are important, not which one is before a comma.\n",
+    "* Remove punctuation, numbers and other symbols, for the same reason as above. Only the words are important, not percentages or numbers.\n",
     "* Remove stopwords, as these don't carry any information about the content of the document\n",
     "* filter most and least frequent words, as they only mess up the results when trying to find similarities between documents. commomn words will be in almost every document, rare ones in almost none.\n",
-    "* Lemmatization, to detect only words with different meaning. Identical words, such as \"is\" and \"are\" will automatically be transformed to \"be\", the same is true with multiples (\"documents\" -> \"document\", \"are\" -> \"be\", ...).\n",
+    "* Lemmatization, to detect only words with different meaning. Identical words, such as \"is\" and \"are\" will automatically be transformed to \"be\", the same is true with multiples (\"documents\" -> \"document\").\n",
     "* n-grams: 2-shingles, to detect frequent combinations of words. Infrequent shingles are filtered just like infrequent words. No higher degrees for the sake of performance."
    ]
   },
@@ -205,6 +211,7 @@
     }
    ],
    "source": [
+    "# print the fill description of the 9th course\n",
     "print(sorted(courses_proc2[courses[9]['courseId']]))"
    ]
   },
@@ -232,7 +239,8 @@
    },
    "outputs": [],
    "source": [
-    "# mapping from courseId to its index\n",
+    "# construct mappings to retrieve a term from its index\n",
+    "# as well as an index given a term\n",
     "words_index = {}\n",
     "i = 0\n",
     "words_list = []\n",
@@ -251,7 +259,8 @@
    },
    "outputs": [],
    "source": [
-    "# mapping from courseId to its index\n",
+    "# construct mappings to retrieve a courseId from its index\n",
+    "# as well as an index given a courseId\n",
     "courses_index = {}\n",
     "i = 0\n",
     "courses_list = []\n",
@@ -270,6 +279,7 @@
    },
    "outputs": [],
    "source": [
+    "# parameters required for constructing the matrix\n",
     "M = len(words_index)\n",
     "N = len(courses_index)"
    ]
@@ -282,20 +292,22 @@
    },
    "outputs": [],
    "source": [
+    "# matrix containing how many times each words\n",
+    "# appears in each document\n",
     "X = np.ndarray((M, N))\n",
     "\n",
     "for c in courses_proc2:\n",
     "    for t in courses_proc2[c]:\n",
-    "        X[words_index[t]][courses_index[c]] += 1\n",
-    "        if courses_index[c]==0:\n",
-    "            i += 1"
+    "        X[words_index[t]][courses_index[c]] += 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Print the 15 terms in the description of the $9^{th}$ class with the highest TF-IDF scores."
+    "### Print the 15 terms in the description of the $9^{th}$ class with the highest TF-IDF scores.\n",
+    "\n",
+    "The TFIDF matrix is constructed transposed, to allow for easier access to the courses, since these are mainly accessed in these exercises."
    ]
   },
   {
@@ -306,6 +318,9 @@
    },
    "outputs": [],
    "source": [
+    "# construct the TF matrix, containing the\n",
+    "# normalized entries in X by the maximum of\n",
+    "# the respective row\n",
     "TF = np.array([x / x.max() for x in X.T])"
    ]
   },
@@ -317,6 +332,8 @@
    },
    "outputs": [],
    "source": [
+    "# construct the IDF array, containing the\n",
+    "# frequencies of the words within the corpus\n",
     "IDF = np.ndarray(M)\n",
     "for i in range(len(X)):\n",
     "    count = 0\n",
@@ -334,6 +351,8 @@
    },
    "outputs": [],
    "source": [
+    "# construct the TFIDF matrix from the\n",
+    "# TF and IDF matrices\n",
     "TFIDF = np.array([x * IDF for x in TF])"
    ]
   },
@@ -345,7 +364,8 @@
    },
    "outputs": [],
    "source": [
-    "IFIDF_9 = TFIDF[courses_index[courses[9]['courseId']]]"
+    "# select only the row related to the 9th course\n",
+    "TFIDF_9 = TFIDF[courses_index[courses[9]['courseId']]]"
    ]
   },
   {
@@ -357,7 +377,8 @@
    },
    "outputs": [],
    "source": [
-    "TFIDF_9_top15 = np.argsort(-IFIDF_9)[:15]"
+    "# retrieve the 15 highest entries in TFIDF_9\n",
+    "TFIDF_9_top15 = np.argsort(-TFIDF_9)[:15]"
    ]
   },
   {
@@ -393,7 +414,7 @@
    "source": [
     "print(\"TOP 15 TERMS FROM TFIDF\")\n",
     "for i in TFIDF_9_top15:\n",
-    "    print(\" \", IFIDF_9[i], \":\", words_list[i])"
+    "    print(\" \", TFIDF_9[i], \":\", words_list[i])"
    ]
   },
   {
@@ -445,6 +466,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the term \"facebook\" only appeeared 9 times within only one description, and was therefore filtered eaclier. thus, that term has no score and no similarity can be computed"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
@@ -471,13 +499,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "the term \"facebook\" only appeeared 9 times within only one description, and was therefore filtered eaclier. thus, that term has no score and no similarity can be computed"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Display the top five courses together with their similarity score for each query."
    ]
   },
@@ -489,10 +510,12 @@
    },
    "outputs": [],
    "source": [
+    "# cosine similarity function, given\n",
+    "# the indeces of two courses\n",
     "def sim(i, j):\n",
     "    di = TFIDF[i]\n",
     "    dj = TFIDF[j]\n",
-    "    return np.dot(di, dj) / (np.linalg.norm(di) * np.linalg.norm(dj))"
+    "    return np.dot(di, dj) / ( np.linalg.norm(di) * np.linalg.norm(dj) )"
    ]
   },
   {
@@ -503,6 +526,8 @@
    },
    "outputs": [],
    "source": [
+    "# compute the scores of all courses for\n",
+    "# the term 'markov chain' within the TFIDF matrix\n",
     "markov_chain_score = []\n",
     "\n",
     "for i in TFIDF:\n",
@@ -521,20 +546,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TOP 15 TERMS FROM TFIDF\n",
+      "TOP 5 COURSES FOR 'MARKOV CHAIN'\n",
       "  5.94063200363 : MATH-332\n",
       "  4.62049155838 : COM-516\n",
       "  3.46536866878 : MGT-484\n",
       "  1.26013406138 : FIN-408\n",
-      "  1.15512288959 : MATH-600\n"
+      "  1.15512288959 : COM-308\n"
      ]
     }
    ],
    "source": [
+    "# find the 5 highest scores in markov_chain_score\n",
     "TFIDF_markov_top5 = np.argsort(-np.array(markov_chain_score))[:5]\n",
     "top_markov_names = []\n",
     "\n",
-    "print(\"TOP 15 TERMS FROM TFIDF\")\n",
+    "print(\"TOP 5 COURSES FOR 'MARKOV CHAIN'\")\n",
     "for i in TFIDF_markov_top5:\n",
     "    top_markov_names.append([i, courses_list[i]])\n",
     "    print(\" \", markov_chain_score[i], \":\", courses_list[i])"
@@ -551,18 +577,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SIMILARITIES BETWEEN TOP 5 MARKOV CHAINS SCORES\n",
-      "          MATH-332 COM-516 MGT-484 FIN-408 MATH-600\n",
-      "MATH-332    1.00    0.34    0.33    0.18    0.14\n",
-      " COM-516    0.34    1.00    0.32    0.21    0.19\n",
-      " MGT-484    0.33    0.32    1.00    0.18    0.10\n",
+      "SIMILARITIES BETWEEN TOP 5 MARKOV CHAINS COURSES\n",
+      "          MATH-332 COM-516 MGT-484 FIN-408 COM-308\n",
+      "MATH-332    1.00    0.34    0.33    0.18    0.07\n",
+      " COM-516    0.34    1.00    0.32    0.21    0.10\n",
+      " MGT-484    0.33    0.32    1.00    0.18    0.08\n",
       " FIN-408    0.18    0.21    0.18    1.00    0.04\n",
-      "MATH-600    0.14    0.19    0.10    0.04    1.00\n"
+      " COM-308    0.07    0.10    0.08    0.04    1.00\n"
      ]
     }
    ],
    "source": [
-    "print(\"SIMILARITIES BETWEEN TOP 5 MARKOV CHAINS SCORES\")\n",
+    "# print the similarity scores between the 5 courses\n",
+    "# this results in a symmetric matrix with 1s on the diagonal\n",
+    "# as the similarity score of a course with itself is 1.00\n",
+    "print(\"SIMILARITIES BETWEEN TOP 5 MARKOV CHAINS COURSES\")\n",
     "print(\"         \", top_markov_names[0][1], top_markov_names[1][1], top_markov_names[2][1],\n",
     "      top_markov_names[3][1], top_markov_names[4][1])\n",
     "for i in top_markov_names:\n",
@@ -582,8 +611,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save all necessary dictionaries and arrays to disk"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
