lab4 vsm: correct typing issues

--- a/ix-lab4/lab4-1-vsm.ipynb
+++ b/ix-lab4/lab4-1-vsm.ipynb
@@ -180,10 +180,10 @@
    },
    "source": [
     "* Make sure every courseId only appears once. If it appears more than once, append the two descriptions\n",
-    "* Change all cheacters to lowercase, to avoid the same word being considered different. Additionally, all words in stopwords.pkl are in lowercase, so this ensures all words are removed correctly\n",
+    "* Change all characters to lowercase, to avoid the same word being considered different. Additionally, all words in stopwords.pkl are in lowercase, so this ensures all words are removed correctly\n",
     "* Remove punctuation, numbers and other symbols, for the same reason as above. Only the words are important, not percentages or numbers.\n",
     "* Remove stopwords, as these don't carry any information about the content of the document\n",
-    "* filter most and least frequent words, as they only mess up the results when trying to find similarities between documents. commomn words will be in almost every document, rare ones in almost none.\n",
+    "* filter most and least frequent words, as they only mess up the results when trying to find similarities between documents. common words will be in almost every document, rare ones in almost none.\n",
     "* Lemmatization, to detect only words with different meaning. Identical words, such as \"is\" and \"are\" will automatically be transformed to \"be\", the same is true with multiples (\"documents\" -> \"document\").\n",
     "* n-grams: 2-shingles, to detect frequent combinations of words. Infrequent shingles are filtered just like infrequent words. No higher degrees for the sake of performance."
    ]
@@ -469,7 +469,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "the term \"facebook\" only appeeared 9 times within only one description, and was therefore filtered eaclier. thus, that term has no score and no similarity can be computed"
+    "The term \"facebook\" only appeared 9 times within only one description, and was therefore filtered eaclier. thus, that term has no score and no similarity can be computed."
    ]
   },
   {
@@ -511,7 +511,7 @@
    "outputs": [],
    "source": [
     "# cosine similarity function, given\n",
-    "# the indeces of two courses\n",
+    "# the indices of two courses\n",
     "def sim(i, j):\n",
     "    di = TFIDF[i]\n",
     "    dj = TFIDF[j]\n",
@@ -607,7 +607,7 @@
    "source": [
     "### What do you think of the results? Give your intuition on what is happening.\n",
     "\n",
-    "Since all we looked for were the descriptions where \"markov chain(s)\" appears the most, we expected to have relatively low similartiy scores. It is likely that courses that deal with markov chains have somewhat similar topics, as it is a mathematical concept at the base, but that is not at all reqired."
+    "Since all we looked for were the descriptions where \"markov chain(s)\" appears the most, we expected to have relatively low similartiy scores. It is likely that courses that deal with markov chains have somewhat similar topics, as it is a mathematical concept at the base, but that is not required at all."
    ]
   },
   {
@@ -645,9 +645,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
