Lab4 lsi : correct some typing issues

--- a/ix-lab4/lab4-2-lsi.ipynb
+++ b/ix-lab4/lab4-2-lsi.ipynb
@@ -182,7 +182,7 @@
    "source": [
     "### Print the top-10 topics as a combination of terms and a combination of documents.\n",
     "\n",
-    "For this, we will print the top 10 terms and decuments respectively of the top-10 topics"
+    "For this, we will print the top 10 terms and documents respectively of the top-10 topics"
    ]
   },
   {
@@ -759,9 +759,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
